--- a/src/Index.html
+++ b/src/Index.html
@@ -53,8 +53,8 @@
       }
 
       .card {
-        width: 18rem;
-        margin: 5px;
+        width: 13rem;
+        margin: 2px;
       }
 
       .card img {
@@ -215,7 +215,7 @@
               </div>
             </div>
             <div class="card">
-              <img src="img_carro.avif" class="card-img-top" alt="..." />
+              <img src="img_carro.jpg" class="card-img-top" alt="..." />
               <div class="card-body">
                 <h5 class="card-title">CARRO</h5>
                 <p class="card-text">SERVIÇOS DE BORRACHARIA.</p>
@@ -223,7 +223,7 @@
               </div>
             </div>
             <div class="card">
-              <img src="img_moto.avif" class="card-img-top" alt="..." />
+              <img src="img_moto.jpg" class="card-img-top" alt="..." />
               <div class="card-body">
                 <h5 class="card-title">MOTO</h5>
                 <p class="card-text">SERVIÇOS DE BORRACHARIA.</p>
