--- a/src/Login.html
+++ b/src/Login.html
@@ -11,6 +11,8 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+
     <link rel="stylesheet" href="style.css" />
     <title>S.O.S. Pneus</title>
     <style>
@@ -61,7 +63,7 @@
     </header>
 
     <div class="container form-container">
-      <form id="loginForm" method="post">
+      <form id="loginForm" action="/api/login" method="POST">
         <div class="mb-3">
           <label for="exampleInputEmail1" class="form-label">E-mail</label>
           <input
@@ -98,68 +100,66 @@
         </div>
         <div class="btn-container">
           <button type="submit" class="btn btn-primary btn-block">LOGAR</button>
-          <a href="cadastro.html" class="btn btn-link btn-block">
-            NÃO POSSUI LOGIN? CLIQUE AQUI
-          </a>
+          <a href="cadastro.html" class="btn btn-link btn-block"
+            >NÃO POSSUI LOGIN? CLIQUE AQUI</a
+          >
         </div>
         <div id="loginError" class="text-danger"></div>
       </form>
       <div id="loginError" class="text-danger"></div>
     </div>
+
     <footer class="bg-dark text-light text-center py-3">
       <p>&copy; 2023 S.O.S. Pneus. Todos os direitos reservados.</p>
     </footer>
 
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script>
-      document
-        .getElementById("loginForm")
-        .addEventListener("submit", async function (event) {
-          event.preventDefault();
+      $(document).ready(function () {
+        $("#loginForm").submit(function (event) {
+          event.preventDefault(); // Evita o envio padrão do formulário
 
-          const formData = new FormData(this);
-          const email = formData.get("email");
-          const senha = formData.get("password");
-          const isPrestador = formData.get("prestador");
+          // Obtenha os valores do formulário
+          var email = $("#exampleInputEmail1").val();
+          var senha = $("#exampleInputPassword1").val();
 
-          try {
-            const response = await fetch("http://localhost:3000/api/login", {
-              method: "POST",
-              headers: {
-                "Content-Type": "application/json",
-              },
-              body: JSON.stringify({ email, senha }),
-            });
+          // Verifique se os campos estão preenchidos
+          if (!email || !senha) {
+            $("#loginError").text("Por favor, preencha todos os campos.");
+            return;
+          }
 
-            if (!response.ok) {
-              throw new Error(
-                `Erro na requisição: ${response.status} ${response.statusText}`
-              );
-            }
+          var manterConectado = $("#exampleCheck1").prop("checked");
+          var prestador = $("#prestadorCheck").prop("checked");
 
-            const usuario = await response.json();
+          // Faça a requisição para o servidor de autenticação
+          $.ajax({
+            url: "http://localhost:3000/login",
+            method: "POST",
+            contentType: "application/json",
+            data: JSON.stringify({
+              email: email,
+              senha: senha,
+              manterConectado: manterConectado,
+              prestador: prestador,
+            }),
+            success: function (response) {
+              console.log("Login bem-sucedido", response);
 
-            if (usuario.error) {
-              console.log("Credenciais incorretas");
-              const errorElement = document.getElementById("loginError");
-              errorElement.textContent =
-                "Credenciais incorretas. Tente novamente.";
-            } else {
-              console.log("Login bem-sucedido:", usuario);
-
-              if (isPrestador) {
+              // Redirecione para a página apropriada com base no tipo de usuário
+              if (prestador) {
                 window.location.href = "Prestador.html";
               } else {
-                window.location.href = `cliente.html?id=${usuario.id}`;
+                window.location.href = "Cliente.html";
               }
-            }
-          } catch (error) {
-            console.error("Erro ao fazer login:", error);
-
-            const errorElement = document.getElementById("loginError");
-            errorElement.textContent =
-              "Credenciais incorretas. Tente novamente.";
-          }
+            },
+            error: function (error) {
+              // Exiba mensagens de erro, se houverem
+              $("#loginError").text("Erro: " + error.responseJSON.error);
+            },
+          });
         });
+      });
     </script>
   </body>
 </html>
