--- a/src/Avaliação.html
+++ b/src/Avaliação.html
@@ -83,9 +83,41 @@
         font-size: 32px; /* Ajuste o tamanho desejado */
         color: #ddd;
       }
+
+      .avaliacao {
+        border: 1px solid #ddd;
+        border-radius: 8px;
+        padding: 15px;
+        margin-bottom: 20px;
+      }
+
+      .nome-cliente {
+        font-weight: bold;
+        margin-bottom: 5px;
+      }
+
+      .data {
+        color: #666;
+        margin-bottom: 10px;
+      }
+
+      .comentario {
+        margin-bottom: 15px;
+      }
+
       .rating-container {
         display: flex;
         align-items: center;
+      }
+
+      .rating label {
+        margin-right: 5px;
+        font-size: 20px;
+      }
+
+      /* Adiciona margem entre os cards */
+      .avaliacao + .avaliacao {
+        margin-top: 10px;
       }
     </style>
 
@@ -189,17 +221,19 @@
 
             avaliacoes.forEach(function (avaliacao) {
               var $avaliacaoElement = $("<div>", {
-                class: "avaliacao",
+                class: "card avaliacao",
                 id: "avaliacao" + avaliacao.id,
               });
 
-              $avaliacaoElement.append(
+              var $cardBody = $("<div>", { class: "card-body" });
+
+              $cardBody.append(
                 "<div class='nome-cliente'>" + avaliacao.nome + "</div>"
               );
-              $avaliacaoElement.append(
+              $cardBody.append(
                 "<div class='data'>" + formatarData(avaliacao.data) + "</div>"
               );
-              $avaliacaoElement.append(
+              $cardBody.append(
                 "<div class='comentario'><p>" +
                   avaliacao.comentario +
                   "</p></div>"
@@ -212,7 +246,9 @@
                   "</div>"
               );
 
-              $avaliacaoElement.append($ratingContainer);
+              $cardBody.append($ratingContainer);
+
+              $avaliacaoElement.append($cardBody);
 
               $("#avaliacoesContainer").append($avaliacaoElement);
             });
