--- a/src/interacao.html
+++ b/src/interacao.html
@@ -22,52 +22,64 @@
     <link rel="stylesheet" href="style.css" />
     <title>S.O.S. Pneus</title>
     <style>
-      .outer-chat-box {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 100%;
-        padding: 10px;
-      }
+.outer-chat-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  padding: 10px;
+  position: relative;
+  background-color: rgba(255, 255, 255, 0.8);
+}
 
-      .inner-chat-box {
-        width: 40%;
-        padding: 15px;
-        border: 1px solid #000;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        height: 560px;
-      }
+.inner-chat-box {
+  width: 40%;
+  padding: 15px;
+  border: 1px solid #000;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 560px;
+  position: relative;
+}
 
-      .message-input {
-        width: 100%;
-        height: 100%;
-      }
+.message-input::placeholder {
+  color: rgba(0, 0, 0, 0.7); /* Ajuste o valor do alfa para escurecer mais ou menos */
+  text-shadow: 0 0 2px rgba(0, 0, 0, 0.7); /* Sombra para escurecer o texto do espaço reservado */
+}
 
-      .button-container {
-        display: flex;
-        justify-content: space-between;
-        margin-top: 10px;
-        width: 100%;
-      }
 
-      .send-button,
-      .evaluation-button {
-        width: 20%;
-      }
+.message-input {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  background: url('img SOS.jpg');
+  background-repeat: no-repeat;
+  opacity: 0.2;
+  z-index: 1;
+  background-position: center;
+  background-size: 100%;
+}
+
+.button-container {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 10px;
+  width: 100%;
+}
+
+.send-button,
+.evaluation-button {
+  width: 20%;
+}
+
     </style>
   </head>
 
   <body
-    style="
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      min-height: 100vh;
-      margin: 0;
-    "
+  style="display: flex; flex-direction: column; justify-content: space-between; min-height: 100vh; margin: 0;">
   >
+  
     <header class="header">
       <a href="pre-interacao.html">
         <img src="img SOS.jpg" class="logo" alt="Logo" />
@@ -82,6 +94,7 @@
       </a>
     </header>
 
+    
     <div class="container mt-4" style="flex: 2">
       <div class="outer-chat-box">
         <div class="inner-chat-box">
