commitando para a branch wagner-t

--- a/Desktop/pco-ads-2023-2-p1-tiaw-t2-sospneus-main/src/cliente.html
+++ b/Desktop/pco-ads-2023-2-p1-tiaw-t2-sospneus-main/src/cliente.html
@@ -74,7 +74,7 @@
         color: #ffffff;
         text-align: center;
         padding: 10px;
-        position: fixed;
+        position: flex;
         bottom: 0;
         width: 100%;
       }
