--- a/Desktop/pco-ads-2023-2-p1-tiaw-t2-sospneus-main/src/Login.html
+++ b/Desktop/pco-ads-2023-2-p1-tiaw-t2-sospneus-main/src/Login.html
@@ -16,23 +16,21 @@
     <link rel="stylesheet" href="style.css" />
     <title>S.O.S. Pneus</title>
     <style>
-      body {
-        display: flex;
-        flex-direction: column;
-        min-height: 100vh;
-        margin: 0;
-        padding: 0;
-        padding-top: 300px;
-      }
+     body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  margin: 0;
+  padding: 50;
+  padding-top: 10px;
+}
 
-      header {
-        position: fixed;
-        width: 100%;
-        top: 0;
-      }
+header {
+  margin-bottom: 50px; /* Altere de margin-top para margin-bottom */
+}
 
-      footer {
-        position: fixed;
+footer {
+        position: flex;
         bottom: 0;
         width: 100%;
       }
@@ -48,11 +46,11 @@
       .form-container {
         max-width: 400px;
         margin: auto;
-        margin-bottom: 200px;
+        margin-bottom: 50px;
       }
     </style>
   </head>
-  <body>
+  <body >
     <header class="text-center">
       <div class="container">
         <a href="Index.html">
